# job-agent

./: .dockerignore  .env.example  Dockerfile  README.md  TECHNICAL.md  pyproject.toml  requirements.txt
azure-functions/daily-search/: function_app.py  local.settings.json  requirements.txt
docs/: TECHNICAL.md  cron-walkthrough.md  evaluation-guide.md  kql-queries.kql  observability-guide.md
evals/: __init__.py  eval_classifier.py  eval_response_quality.py  evaluators.py  golden_dataset.jsonl  response_quality_dataset.jsonl
scripts/: init_db.py  test_cli.py  test_cron.py  test_e2e.py  test_notifications.py  test_otel.py  test_routing.py  test_workflow.py
src/job_agent/: application_prep.py  clients.py  config.py  models.py  notifications.py  providers.py  ranking.py  resume_parser.py  server.py  store.py  tools.py  webapp.py  workflows.py
src/job_agent/static/: index.html
src/job_agent/static/css/: style.css
src/job_agent/static/js/: app.js
